Bug 14005 - dbus-send manpage and dbus --help differ
Summary: dbus-send manpage and dbus --help differ
Status: RESOLVED FIXED
Alias: None
Product: dbus
Classification: Unclassified
Component: core (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Simon McVittie
QA Contact: John (J5) Palmieri
URL: http://cgit.freedesktop.org/~smcv/dbu...
Whiteboard:
Keywords: patch
Depends on:
Blocks: dbus-1.5
  Show dependency treegraph
 
Reported: 2008-01-10 05:08 UTC by Till Maas
Modified: 2012-02-14 08:30 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
[1/3] dbus-send.1: use bold and italic type consistently (3.60 KB, patch)
2012-02-08 06:17 UTC, Simon McVittie
Details | Splinter Review
[2/3] dbus-send.1, dbus-send: document --print-reply=literal consistently (2.16 KB, patch)
2012-02-08 06:18 UTC, Simon McVittie
Details | Splinter Review
[3/3] dbus-send.1: document --reply-timeout (1.25 KB, patch)
2012-02-08 06:18 UTC, Simon McVittie
Details | Splinter Review

Description Till Maas 2008-01-10 05:08:39 UTC
I use Fedora 8.

Description of problem:
The dbus-send manpage does not mention --reply-timeout and does not show that
--print-reply takes an argument

Version-Release number of selected component (if applicable):
dbus-1.1.2-7.fc8


How reproducible:
always

Steps to Reproduce:
1.man dbus-send
2.dbus-send --help

  
Actual results:
dbus-help shows that there is --reply-timeout and that --print-reply takes an
argument

Expected results:
--reply-timeout should be mentioned in the manpage and the argument of
--print-reply should be explained.
Comment 1 Simon McVittie 2012-02-08 06:16:55 UTC
(dbus/doc is a defunct project to design a documentation extension to D-Bus introspection; moving this to dbus/core.)
Comment 2 Simon McVittie 2012-02-08 06:17:45 UTC
Created attachment 56746 [details] [review]
[1/3] dbus-send.1: use bold and italic type consistently

According to man-pages(7)

* bold is for literal text, the name of the thing being documented,
  or the name of another man page

* italic is for replaceable text, usually in all-caps

* normal type (in the SYNOPSIS) is for special syntax like the []
  indicating optional things

Bug: https://bugs.freedesktop.org/show_bug.cgi?id=14005
Signed-off-by: Simon McVittie <simon.mcvittie@collabora.co.uk>
Comment 3 Simon McVittie 2012-02-08 06:18:07 UTC
Created attachment 56747 [details] [review]
[2/3] dbus-send.1, dbus-send: document --print-reply=literal  consistently

Bug: https://bugs.freedesktop.org/show_bug.cgi?id=14005
Signed-off-by: Simon McVittie <simon.mcvittie@collabora.co.uk>
Comment 4 Simon McVittie 2012-02-08 06:18:27 UTC
Created attachment 56748 [details] [review]
[3/3] dbus-send.1: document --reply-timeout

Bug: https://bugs.freedesktop.org/show_bug.cgi?id=14005
Signed-off-by: Simon McVittie <simon.mcvittie@collabora.co.uk>
Comment 5 Simon McVittie 2012-02-08 06:19:41 UTC
In git:
ssh://people.freedesktop.org/~smcv/dbus.git doc-dbus-send-14005
Comment 6 Lennart Poettering 2012-02-13 13:18:24 UTC
Looks all good to me text-wise. My groff-fu is non-existant however, so I can't say anything about the formatting changes. But it looks alright if I apply and build it. So I think this should be enough for a review.
Comment 7 Simon McVittie 2012-02-14 08:25:23 UTC
Thanks, fixed in git for 1.5.10


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.